# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-02-19  Piotr Ożarowski
	* CSFD movie plugin updated (still needs work)
	* DVDEmpire movie plugin added (thanks to Michael Jahn)

2007-02-14  Piotr Ożarowski
	* KinoDe and FilmeVonAZ movie plugins updated (thanks to Michael Jahn)

---- 0.9.1 ---

2007-02-13  Piotr Ożarowski
	* KinoDe movie plugin updated (thanks to Michael Jahn)

2007-02-12  Piotr Ożarowski
	* Fix broken databases automatically (return date will be set to 2007-01-01) - redo the upgrade process if you don't like it

2007-02-11  Piotr Ożarowski
	* Fix one more bad case in upgrade function
	* Fix setting loan status in upgrade function

2007-02-03  Jessica K. Parth
	* OFDb movie plugin updated (website changed)

2007-01-27  Piotr Ożarowski
	* English translation fixes (thanks Frijolie)

---- 0.9 ---

2007-01-26  Piotr Ożarowski
	* WP and Filmweb movie plugins updated

2007-01-26  Jessica K. Parth
	* Fix AniDB Problems in Windows ( file-open problem in movie.py )

2007-01-25  Piotr Ożarowski
	* Fix more bad cases in upgrade from old DB function

2007-01-24  Piotr Ożarowski
	* Fetch from Amazon function recognizes more posters now

2007-01-16  Vasco Nunes
	* Czech translation updated (thanks to Ondra 'Kepi' Kudlík)

2007-01-15  Piotr Ożarowski
	* AnimeDB movie plugin updated

2007-01-11  Piotr Ożarowski
	* Fix possible memory leak
	* Select first movie by default
	* Remove Excel mime types from CSV import plugin
	* Fix list of fields to import

2007-01-10  Vasco Nunes
	* PTGate movie plugin updated

---- 0.9-rc3 ---

2007-01-09  Piotr Ożarowski
	* Catch some more bad cases while upgrading database
	* Switch to sqlite if psycopg2 or MySQLdb module are not available
	* Fix upgrading vol/col loan data
	* Version changed to 0.9-rc3

2007-01-08  Piotr Ożarowski
	* Ignore bad entries in loans table
	* Don't modify old database while upgrading

2007-01-08  Vasco Nunes
	* Italian translation updated (Thanks to Diego)
