@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-02-20  Piotr Ożarowski
+	* IMDB movie plugin updated
+
 2007-02-19  Piotr Ożarowski
 	* CSFD movie plugin updated (still needs work)
 	* DVDEmpire movie plugin added (thanks to Michael Jahn)
